--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,6 @@
+[nixpacks]
+language = "node"
+
 [phases.setup]
 nixPkgs = ["nodejs"]
 
@@ -6,3 +9,6 @@ cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
+
+[start]
+cmd = "node server.js"
